--- a/style.css
+++ b/style.css
@@ -58,8 +58,17 @@ header{
   justify-items: center;
   align-items: center;
   grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
-  grid-template-columns: 1fr 1fr; 
+  grid-template-columns: 300px 1fr auto; 
   grid-area: header;
+}
+
+.logo{
+  font-size: 3rem;
+  
+}
+
+.tagline{
+  font-size: 1.8rem;
 }
 
 /* ------------------------------------------------
@@ -76,6 +85,23 @@ header{
   
 }
 
+.section-title{
+  font-size: 2rem;
+  padding: 30px 0 40px;
+}
+
+.menu-container, 
+.stats-container{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 100px, 1fr;
+  text-align: center;
+}
+
+.menu-container{
+  gap: 40px;
+}
+
 /* ------------------------------------------------
 |        STATS SECTION - RIGHT SIDE BAR           |
 --------------------------------------------------*/
@@ -88,6 +114,21 @@ header{
   background-color: var(--dark-stats);
   place-items: start center;
 }
+
+.stats-container{
+  gap: 20px;
+}
+
+.total-books, 
+.total-read, 
+.total-unread,
+.total-manual,
+.total-olapi,
+.total-nytapi{
+  text-align: center;
+  font-size: 2rem;
+}
+
 
 /* ------------------------------------------------
 |     GALLERY SECTION - MAIN CONTENT              |
@@ -115,7 +156,6 @@ header{
 
 .empty-list{
   background-color: black;
-  /* border-radius: 50%; */
   display: grid;
   place-items:  center ;
   grid-column: 1/-1;
@@ -162,4 +202,115 @@ footer{
   align-items: center;
   justify-items: center;
   padding: 20px 0;
+}
+
+.footer{
+  padding: 20px 0;
+}
+
+.line1{
+  font-size: 1.2rem;
+  text-align: center;
+  line-height: 2;
+  word-break: keep-all;
+}
+
+.line2{
+  text-align: center;
+  font-size: 1.2rem;
+  line-height: 2;
+  word-break: keep-all;
+}
+
+
+/* ------------------------------------------------
+|                    ICONS                        |
+--------------------------------------------------*/
+
+.iconify{
+  color: var(--iconify-text-color);
+  font-size: 1.5rem;
+  /* vertical-align: -0.35em !important; */
+  margin-right: 8px;
+  pointer-events: none;
+}
+
+.material-icons,
+.material-symbols-outlined{
+  font-size: 24px !important;
+  vertical-align: -0.35em !important;
+  margin-right: 10px;
+  pointer-events: none;
+}
+
+.material-icons.md,
+.material-symbols-outlined.md{
+  font-size: 32px !important;
+}
+
+.material-icons.lg,
+.material-symbols-outlined.lg{
+  font-size: 48px !important;
+}
+
+
+
+/* ------------------------------------------------
+|   MEDIA QUERIES - SMALL SCREENS                 |
+--------------------------------------------------*/
+
+/* small screens  */
+@media (max-width:960px) {
+  main{
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+  
+    grid-template-areas: 
+      "header"
+      "menu"       
+      "gallery" 
+      "stats"
+      "footer";
+  }
+  header{
+    justify-items: center;
+    align-items: center;
+    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-columns: 1fr; 
+    word-break:keep-all;
+  }
+
+  .tagline{
+    font-size: 1.4rem;
+    padding-bottom: 20px;
+  }
+
+  .menu-container div:last-child{
+    padding-bottom: 40px;
+  }
+
+  #stats .stats-container{
+    grid-template-columns: 1fr 1fr;
+    padding-bottom: 20px;
+  }
+
+  .results-status{
+    width: 40vw;
+    left: 40px;
+  }
+
+  #gallery{
+    padding:0;
+    gap: 0;
+  }
+
+  .reading-list{
+    place-items: center;
+    /* padding-top: 20px; */
+    line-height: 1;
+  }
+
+  .empty-list{
+    padding:20px 0;
+  }
 }
