--- a/style.css
+++ b/style.css
@@ -432,10 +432,144 @@ footer{
 
 
 /* ------------------------------------------------
+|             MODALS - SHARED                     |
+--------------------------------------------------*/
+
+dialog{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-color: var(--alt-bg-color);
+  background-color: var(--dark-stats);
+  border-radius: 15px;
+  padding: 20px;
+}
+
+dialog:focus{
+  outline: none;
+}
+
+::backdrop {
+  background-image: linear-gradient( 45deg, var(--main-bg-color), var(--alt-bg-color) );
+  opacity: 0.75;
+}
+
+.dialog { 
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(auto, 1fr);  
+}
+
+.dialog-header{
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.close{
+  justify-self: right;
+  cursor: pointer;
+}
+
+.dialog-content{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: auto ;
+  gap: 25px 15px;
+}
+
+.dialog-card{
+  display: grid;
+  place-items: center;
+  gap: 5px; 
+}
+
+/* ------------------------------------------------
+|            MODALS - BOOK FORM                   |
+--------------------------------------------------*/
+
+#book-form{
+  width: 400px;
+  height: 600px;
+}
+
+#book-form > .dialog > .dialog-content{
+  font-size: 2.5rem;
+  font-family: "Roboto";
+  color: var(--accent-color)
+}
+
+#book-form > .dialog > .dialog-content > .dialog-card {
+  gap: 10px;
+}
+
+#book-form  .heading{
+  grid-column: 1/-1;
+  justify-self: center;
+  font-size: 2.5rem;
+  color: var(--text-color);
+}
+
+form#add-book{
+  width: 100%;
+  display: grid;
+  justify-self: center;
+  align-self: center;
+  place-items: center;
+  gap: 10px;
+}
+
+.form-group{
+  display: grid;
+  width: 100%;
+}
+
+.form-group label{
+  margin-left: 25px;
+  line-height: 1.8;
+  font-size: 1.5rem;
+  color: var(--main-text-color)
+}
+
+.form-group select,
+.form-group input[type="text"],
+.form-group input[type="number"]{
+  width: 100%;
+  padding: 5px 20px;
+  border-radius: 20px;
+  outline: none;
+  font-size: 1.5rem;
+  background-color: var(--base-text-color);
+}
+
+.form-group:last-child{
+  margin-top: 20px;
+}
+
+.form-group button,
+.form-group input[type="submit"] {
+  justify-self: center;
+  width: 50%;
+  background-color: color-mix(in srgb, var(--text-color) 75%, black 25%);
+  
+  padding: 10px 20px;
+  font-size: 1.3rem;
+  font-weight: 600;
+  border-radius: 8px;
+  outline: none;
+  border: 3px solid var(--alt-bg-color);
+}
+
+.form-group button:hover{
+  background-color: var(--text-color);
+  color: var(--alt-bg-color);
+  border: 1px solid var(--alt-text-color);
+}
+
+/* ------------------------------------------------
 |   MEDIA QUERIES - SMALL SCREENS                 |
 --------------------------------------------------*/
 
-/* small screens  */
 @media (max-width:960px) {
   main{
     grid-template-columns: 1fr;
